8256843: [PPC64] runtime/logging/RedefineClasses.java fails with assert: registers not saved on stack